--- a/4thIR.TextTranslation/_4thIR.TextTranslation.Activities/Properties/Resources.resx
+++ b/4thIR.TextTranslation/_4thIR.TextTranslation.Activities/Properties/Resources.resx
@@ -149,10 +149,6 @@
     <value>Authentication</value>
     <comment>category</comment>
   </data>
-  <data name="Common_Category" xml:space="preserve">
-    <value>Common</value>
-    <comment>category</comment>
-  </data>
   <data name="Input_Category" xml:space="preserve">
     <value>Input</value>
     <comment>category</comment>
@@ -197,6 +193,82 @@
     <value>Language.SourceLanguage</value>
     <comment>property description</comment>
   </data>
+  <data name="Translation_Sentence_DisplayName" xml:space="preserve">
+    <value>Sentence</value>
+    <comment>property name</comment>
+  </data>
+  <data name="Translation_Sentence_Description" xml:space="preserve">
+    <value>Text to be translated</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Translation_ConversionLanguage_DisplayName" xml:space="preserve">
+    <value>Conversion Language</value>
+    <comment>property name</comment>
+  </data>
+  <data name="Translation_ConversionLanguage_Description" xml:space="preserve">
+    <value>Language.ConversionLanguage</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Translation_TranslatedText_DisplayName" xml:space="preserve">
+    <value>Translated Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="Translation_TranslatedText_Description" xml:space="preserve">
+    <value>Result of the translation</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="Translation_DisplayName" xml:space="preserve">
+    <value>Translation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="Translation_Description" xml:space="preserve">
+    <value>Translates text to target language.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="Translation_SourceLanguage_DisplayName" xml:space="preserve">
+    <value>Source Language</value>
+    <comment>property name</comment>
+  </data>
+  <data name="Translation_SourceLanguage_Description" xml:space="preserve">
+    <value>The original language. (Language.SourceLanguage)</value>
+    <comment>property description</comment>
+  </data>
   <data name="Input_Category" xml:space="preserve">
     <value>Input</value>
     <comment>category</comment>
@@ -206,7 +278,7 @@
     <comment>property name</comment>
   </data>
   <data name="Translation_Sentence_Description" xml:space="preserve">
-    <value>Text to be translated</value>
+    <value>The original text.</value>
     <comment>property description</comment>
   </data>
   <data name="Input_Category" xml:space="preserve">
@@ -218,7 +290,7 @@
     <comment>property name</comment>
   </data>
   <data name="Translation_ConversionLanguage_Description" xml:space="preserve">
-    <value>Language.ConversionLanguage</value>
+    <value>The target language. (Language.ConversionLanguage)</value>
     <comment>property description</comment>
   </data>
   <data name="Input_Category" xml:space="preserve">
@@ -230,7 +302,7 @@
     <comment>property name</comment>
   </data>
   <data name="Translation_TranslatedText_Description" xml:space="preserve">
-    <value>Result of the translation</value>
+    <value>The translated text.</value>
     <comment>property description</comment>
   </data>
   <data name="Output_Category" xml:space="preserve">
