--- a/4thIR.ObjectDetection/_4thIR.ObjectDetection.Activities/Properties/Resources.resx
+++ b/4thIR.ObjectDetection/_4thIR.ObjectDetection.Activities/Properties/Resources.resx
@@ -149,10 +149,6 @@
     <value>Authentication</value>
     <comment>category</comment>
   </data>
-  <data name="Common_Category" xml:space="preserve">
-    <value>Common</value>
-    <comment>category</comment>
-  </data>
   <data name="Input_Category" xml:space="preserve">
     <value>Input</value>
     <comment>category</comment>
@@ -195,6 +191,106 @@
   </data>
   <data name="ObjectDetection_Path_Description" xml:space="preserve">
     <value>Full or relative file path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ObjectDetection_Detections_DisplayName" xml:space="preserve">
+    <value>Detections</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ObjectDetection_Detections_Description" xml:space="preserve">
+    <value>Number of detections </value>
+    <comment>property description</comment>
+  </data>
+  <data name="ObjectDetection_DetectionBoxes_DisplayName" xml:space="preserve">
+    <value>Detection Boxes</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ObjectDetection_DetectionBoxes_Description" xml:space="preserve">
+    <value>A 2-D array of size [N, 4] containing bounding box coordinates in the following order: [ymin, xmin, ymax, xmax]</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ObjectDetection_DetectionClasses_DisplayName" xml:space="preserve">
+    <value>Detection Classes</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ObjectDetection_DetectionClasses_Description" xml:space="preserve">
+    <value>An array of size [N] containing detection class index from the label file</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassification_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassification_Description" xml:space="preserve">
+    <value>Classifies images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassification_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassification_Path_Description" xml:space="preserve">
+    <value>Full path to image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassification_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassification_Label_Description" xml:space="preserve">
+    <value>Result of classification.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="ObjectDetection_DisplayName" xml:space="preserve">
+    <value>Object Detection</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ObjectDetection_Description" xml:space="preserve">
+    <value>Identifies objects in images, in terms of their location in the image and the class they belong to.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ObjectDetection_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ObjectDetection_Path_Description" xml:space="preserve">
+    <value>Full path to image file.</value>
     <comment>property description</comment>
   </data>
   <data name="Input_Category" xml:space="preserve">
