--- a/4thIR.TextTranslationT/_4thIR.TextTranslationT.Activities/Properties/Resources.resx
+++ b/4thIR.TextTranslationT/_4thIR.TextTranslationT.Activities/Properties/Resources.resx
@@ -145,4 +145,96 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="TextTranslation_DisplayName" xml:space="preserve">
+    <value>Text Translation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextTranslation_Description" xml:space="preserve">
+    <value>Converts text from source language to conversion language.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextTranslation_Sentence_DisplayName" xml:space="preserve">
+    <value>Sentence</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_Sentence_Description" xml:space="preserve">
+    <value>The original text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextTranslation_SourceLanguage_DisplayName" xml:space="preserve">
+    <value>Source Language</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_SourceLanguage_Description" xml:space="preserve">
+    <value>The original language.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextTranslation_ConversionLanguage_DisplayName" xml:space="preserve">
+    <value>Conversion Language</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_ConversionLanguage_Description" xml:space="preserve">
+    <value>The target language for conversion.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="TextTranslation_ConvertedText_DisplayName" xml:space="preserve">
+    <value>Converted Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextTranslation_ConvertedText_Description" xml:space="preserve">
+    <value>The translated text.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
