--- a/4thIR.FormulaRecOV/_4thIR.FormulaRecOV.Activities/Properties/Resources.resx
+++ b/4thIR.FormulaRecOV/_4thIR.FormulaRecOV.Activities/Properties/Resources.resx
@@ -145,4 +145,96 @@
     <value>Common</value>
     <comment>category</comment>
   </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="FormulaRecognition_DisplayName" xml:space="preserve">
+    <value>Formula Recognition</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="FormulaRecognition_Description" xml:space="preserve">
+    <value>Detects and extracts formulas in images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="FormulaRecognition_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="FormulaRecognition_Path_Description" xml:space="preserve">
+    <value>Full path to image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="FormulaRecognition_FormulaType_DisplayName" xml:space="preserve">
+    <value>Formula Type</value>
+    <comment>property name</comment>
+  </data>
+  <data name="FormulaRecognition_FormulaType_Description" xml:space="preserve">
+    <value>FormulaType.Type</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="FormulaRecognition_Formula_DisplayName" xml:space="preserve">
+    <value>Formula</value>
+    <comment>property name</comment>
+  </data>
+  <data name="FormulaRecognition_Formula_Description" xml:space="preserve">
+    <value>The extracted formula.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="FormulaRecognition_Score_DisplayName" xml:space="preserve">
+    <value>Score</value>
+    <comment>property name</comment>
+  </data>
+  <data name="FormulaRecognition_Score_Description" xml:space="preserve">
+    <value>The degree of accuracy.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
 </root>
